# Budget-System

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  conftest.py  docker-compose.yml  pyproject.toml
accounts/: admin.py  admin_panel_urls.py  admin_panel_views.py  api_urls.py  api_urls_users.py  api_views.py  apps.py  auth_service.py  middleware.py  models.py  serializers.py  urls.py  views.py
approvals/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  services.py
assets/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
budget_system/: asgi.py  settings.py  wsgi.py
cli/: client.py  config.py  formatters.py  main.py
config/: asgi.py  urls.py  wsgi.py
core/: admin.py  api_urls.py  api_urls_config.py  api_urls_dashboard.py  api_urls_email_logs.py  api_views.py  config_api.py  dashboard_api.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
deliveries/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
docker/: entrypoint.sh
orders/: admin.py  api_urls.py  api_urls_categories.py  api_urls_projects.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
payments/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
scripts/: dev-server-common.ps1  restart-dev-server.ps1  start-dev-server.ps1  status-dev-server.ps1  stop-dev-server.ps1
static/css/: app.css
templates/: base.html
(+100 files in other folders)
